@@ -21,3 +21,6 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%p] %C - %m%n
 
 log4j.logger.org.apache.hadoop=ERROR
+
+# need to turn this on so that we know the test seed
+log4j.logger.org.apache.tinkerpop.gremlin.TestHelper=INFO
