@@ -20,4 +20,7 @@
 log4j.rootLogger=OFF, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%p] %C - %m%n
+log4j.appender.stdout.layout.ConversionPattern=[%p] %C - %m%n 
+
+# need to turn this on so that we know the test seed
+log4j.logger.org.apache.tinkerpop.gremlin.TestHelper=INFO
