@@ -24,3 +24,6 @@ log4j.appender.stdout.layout.ConversionPattern=[%p] %C - %m%n
 
 # need to turn this on as this test actually tests "logging" - needs INFO at minimum for tests to pass
 log4j.logger.org.apache.tinkerpop.gremlin.util.Log4jRecordingAppenderTest=INFO
+
+# need to turn this on so that we know the test seed
+log4j.logger.org.apache.tinkerpop.gremlin.TestHelper=INFO
